# strawberry-projects

./: .env  .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: e47a9eef8faf_added_book_table.py
sample_project/: __init__.py  main.py
sample_project/core/: __init__.py  config.py  db.py
sample_project/graphql/: __init__.py  root_mutation.py  root_query.py
sample_project/graphql/book/mutations/: __init__.py  create_book.py
sample_project/graphql/book/node/: book.py
sample_project/graphql/book/query/: __init__.py  book.py
sample_project/models/: base.py  book.py
sample_project/schemas/: book.py
sample_project/services/: __init__.py
sample_project/services/entity/: __init__.py  book.py
