[tool.poetry]
name = "strawberry-project"
version = "0.1.0"
description = ""
authors = ["Aryan Kumar <aryankumar@analytic-edge.com>"]
readme = "README.md"
packages = [{include = "strawberry_project"}]

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.22.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"

[tool.poe.tasks]
test = "coverage run -m pytest"
sort = "isort --config=.sort.cfg sample_project"
format = "black --config=pyproject.toml sample_project"
lint = "flake8 --config=.flake8 sample_project"
type-check = "mypy --config=pyproject.toml sample_project"
coverage = "coverage report -m --skip-covered"
coverage-html = "coverage html -d coverage --skip-covered"
develop = "pre-commit install"
pre-commit-check = "pre-commit run --all-files"


[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
strawberry-graphql = {extras = ["fastapi"], version = "^0.204.0"}
psycopg2-binary = "^2.9.7"
sqlalchemy = "^2.0.20"
sqlalchemy-utils = "^0.41.1"
fastapi-sqlalchemy = "^0.2.1"
strawberry-sqlalchemy-mapper = "^0.1.1"
pydantic-settings = "^2.0.3"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
show_column_numbers = true
pretty = true
color_output = true
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]


[[tool.mypy.overrides]]
module = ["strawberry_sqlalchemy_mapper.*"]
ignore_missing_imports = true

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
known_third_party = ["fastapi", "fastapi_sqlalchemy", "pydantic", "pydantic_settings", "sqlalchemy", "sqlalchemy_utils", "strawberry", "strawberry_sqlalchemy_mapper"]

[tool.black]
line-length = 79
include = '.pyi?$'
extend-exclude = """ .venv | .vscode | coverage | tests/test-data | alembic """